Arguments: Add a new `ArgumentMap` utility based on :class:`MultiDict`
This is essentially a tweaked :class:`MultiDict`( a dictionary that can
hold multiple candidate values for each key), that provides reduction
operations across candidate values.

--- a/environment.yml
+++ b/environment.yml
@@ -24,6 +24,7 @@ dependencies:
   - click
   - codecov
   - pytest-cov
+  - multidict
   - pip:
     - "git+https://github.com/inducer/codepy"
     - "git+https://github.com/opesci/pyrevolve"
